--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,14 @@
             <artifactId>pitest-maven</artifactId>
             <version>1.9.11</version>
         </dependency>
+
+        <!-- org.junit.jupiter.params -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.9.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
